--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
 
     <style>
       *{
-        font-family: 'Roboto', sans-serif;;
+        font-family: 'Roboto', sans-serif;
+        margin: 0;
       }
     </style>
 
